--- a/public/style.css
+++ b/public/style.css
@@ -2,9 +2,67 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: sans-serif;
 }
 
 body{
     background-color: #222;
     color: white;
+}
+
+.title{
+    text-align: center;
+    margin-top: 2rem 
+}
+
+.container{
+    display: flex;
+    flex-wrap: wrap;
+    width: 90%;
+    margin: 3rem auto;
+    justify-content: center;
+    
+}
+
+.card{
+    display: flex;
+    flex-direction: column;
+    width: calc(30% - 4rem);
+    margin: 1rem;
+    align-items: center;
+    background-color: #3D52A1;
+    border-radius: 25px;
+    padding: 1rem;
+}
+
+img{
+    width: 250px;
+    height: 380px;
+    margin-bottom: 1rem;
+}
+
+.mb-1{
+    margin-bottom: 1rem;
+}
+
+a{
+    text-decoration: none;
+    color: white;
+    font-weight: 500;
+    background-color: #7191E6;
+    border-radius: 20px;
+    padding: 0.5rem;
+}
+
+.card-more{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.container-more{
+    width: 50%;
+    margin: 0 auto;
+    text-align: center;
+    margin-top: 3rem;
 }
